fix word list overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,8 @@ body {
 #word-search-words {
   padding-left: 5em;
 }
+
+#word-search-words > ul {
+  overflow: auto;
+  height: 70vh;
+}
